# pdf-editor

./: .gitignore  README.md  capacitor.config.ts  next.config.ts  package-lock.json  package.json
android/: .gitignore  gradle.properties  settings.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/debug/res/values/: strings.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  pdfium_jni.cpp
android/app/src/main/res/values/: strings.xml
docs/: object-editing-architecture.md  privacy.html  release-signing.md
scripts/: copy-pdf-worker.mjs  gen-assets.mjs  gen-store-assets.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/object-editor/: page.tsx
src/app/pdf-engine-test/: page.tsx
src/components/: DevEngineTestLink.tsx
src/components/editor/: AnnotationLayer.tsx  AnnotationToolbar.tsx  ExportMenu.tsx  ImageLayer.tsx  MobileToolbar.tsx  ObjectLayer.tsx  PdfEditor.tsx  PdfPageCanvas.tsx  PdfViewer.tsx  ProjectLibrary.tsx  TextLayer.tsx  ThumbnailSidebar.tsx  Toolbar.tsx
src/components/monetization/: AdBanner.tsx  Paywall.tsx
src/components/object/: NumberField.tsx  ObjectCanvas.tsx  ObjectEditorLink.tsx
src/components/ui/: button.tsx
src/hooks/: usePdfDocument.ts
src/lib/: billing.ts  download.ts  pro.ts  projects.ts  save.ts  utils.ts
src/lib/object/: base64.ts  handoff.ts  objectCoords.ts  pdfEngine.ts  transforms.ts
src/lib/pdf/: convert.ts  coordinates.ts  export.ts  fontStyles.ts  lift.ts  pdfjs.ts  render.ts  sampleColor.ts  types.ts
store/: listing.md
(+3 files in other folders)
